<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <Button
            android:text="@string/freeOne_button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/freeOne_button"
            app:layout_constraintBaseline_toBaselineOf="@+id/freeTwo_button"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/freeTwo_button" android:layout_marginStart="16dp"/>
    <Button
            android:text="@string/freeThree_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/freeThree_button"
            app:layout_constraintBaseline_toBaselineOf="@+id/freeTwo_button"
            app:layout_constraintStart_toEndOf="@+id/freeTwo_button" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/freeTwo_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/freeTwo_button" app:layout_constraintStart_toEndOf="@+id/freeOne_button"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/freeThree_button"
            android:layout_marginTop="28dp" app:layout_constraintTop_toTopOf="parent"
    />
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/Input_Name"
            android:ems="10"
            android:id="@+id/Input_Name"
            android:layout_marginEnd="80dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/freeTwo_button"
            app:layout_constraintBottom_toTopOf="@+id/Input_Band" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="200dp" android:layout_marginTop="8dp" tools:text="@string/Input_Name"
            android:hint="@string/Name_Text" android:autofillHints=""/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/Input_Band"
            android:ems="10"
            android:id="@+id/Input_Band"
            android:layout_marginEnd="80dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Input_Name"
            app:layout_constraintBottom_toTopOf="@+id/Input_No" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="200dp" android:hint="@string/Band_Text"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/Input_No"
            android:ems="10"
            android:id="@+id/Input_No"
            android:layout_marginEnd="80dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/Input_Band"
            app:layout_constraintBottom_toTopOf="@+id/Add_Button" app:layout_constraintVertical_bias="0.495"
            android:layout_marginStart="200dp" app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/No_Text"/>
    <Button
            android:text="@string/Add_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Add_Button" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/Cancel_Button"/>
    <Button
            android:text="@string/Cancel_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Cancel_Button" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/Add_Button" app:layout_constraintHorizontal_bias="0.5"/>
    <TextView
            android:text="@string/Name_Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Name_text"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/Input_Name"
            app:layout_constraintEnd_toStartOf="@+id/Input_Name" android:layout_marginEnd="8dp"
            android:textSize="24sp"/>
    <TextView
            android:text="@string/Band_Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Band_Text"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/Input_Band"
            app:layout_constraintEnd_toStartOf="@+id/Input_Band" android:layout_marginEnd="8dp"
            tools:text="@string/Band_Text" android:textSize="24sp"/>
    <TextView
            android:text="@string/No_Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/No_Text" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/Input_No"
            app:layout_constraintEnd_toStartOf="@+id/Input_No" android:layout_marginEnd="8dp"
            tools:text="@string/No_Text" android:textSize="24sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>